# MultiAgentFunctionEncoder

./: .gitignore  pyproject.toml  ruff.toml
Examples/: AVMNISTExample.py  __init__.py
FunctionEncoder/Dataset/: AVMNISTDataset.py  __init__.py
config/: main.yaml
